--- a/_output.yml
+++ b/_output.yml
@@ -3,10 +3,10 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li><a href="./">A Minimal Book Example</a></li>
+        <li><a href="./">ScPo 2nd Year Econometrics</a></li>
       after: |
-        <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
-    edit: https://github.com/rstudio/bookdown-demo/edit/master/%s
+        <li><a href="https://github.com/floswald/ScPoEconometrics" target="blank">Published with bookdown</a></li>
+    edit: https://github.com/floswald/ScPoEconometrics/edit/master/%s
     download: ["pdf", "epub"]
 bookdown::pdf_book:
   includes:
