--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 language: r
-cache: packages
+cache:
+  packages: yes
+  directories:
+    - $HOME/cache
 sudo: false
 pandoc_version: 1.19.2.1
 
-before_script:
+before_install:
   - Rscript -e 'install.packages(c("dplyr", "ggplot2", "reshape2"));if (!all(c("dplyr", "ggplot2", "reshape2") %in% installed.packages())) { q(status = 1, save = "no")}'
+
+before_script:
   - chmod +x ./_build.sh
   - chmod +x ./_deploy.sh
 
