--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,10 @@ Title: ScPoEconometrics
 Version: 0.0.1
 Authors@R: c(
     person("Florian", "Oswald", email = "florian.oswald@sciencespo.fr", role = c("aut","cre")),
-    person("Jean-Marc", "Robin", email = "jeanmarc.robin@sciencespo.fr", role = "ctb"))
+    person("Jean-Marc", "Robin", email = "jeanmarc.robin@sciencespo.fr", role = "ctb"),
+    person("Vincent", "Viers", email = "vincent.viers@berkely.edu", role = "ctb"))
 Depends: R (>= 3.4.0)
-URL: https://github.com/floswald/ScPoEconometrics
+URL: https://github.com/ScPoEcon/ScPoEconometrics
 Imports: 
   bookdown,
   shiny,
