all data needs to refer to /inst as in reg_standardized. R CMD CHECK runs locally

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,20 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^.*\.Rmd$
+^.*\.html$
+^.*\.jpg$
+_book*
+^.*\.yml$
+^.*\.sh$
+^.*\.css$
+^.*\.gif$
+^.*\.bib$
+^.*\.tex$
+images
+
+
+
+
+
+
+
