--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
     person("Jean-Marc", "Robin", email = "jeanmarc.robin@sciencespo.fr", role = "ctb"),
     person("Vincent", "Viers", email = "vincent.viers@sciencespo.fr", role = "ctb"))
 Depends: R (>= 3.4.0)
-License: MIT
+License: MIT + file LICENSE
 Description: The is the R package for the 2nd year UG course in econometrics at SciencesPo.
 URL: https://github.com/ScPoEcon/ScPoEconometrics
 Imports: bookdown,
@@ -17,7 +17,6 @@ Imports: bookdown,
   mvtnorm,
   tidyverse,
   reshape2,
-  mvtnorm,
   datasauRus,
   plotly
 Suggests:
