chapter 2 referred to wrong data location. added empty data/ dir. make all travis jobs either pass or fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,4 @@ before_script:
 
 script:
   - R CMD build .
-  - R CMD check *tar.gz
-  - ./_build.sh
-  - ./_deploy.sh
+  - R CMD check *tar.gz && ./_build.sh && ./_deploy.sh
