--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ sudo: false
 pandoc_version: 1.19.2.1
 
 install:
+  - R -e 'install.packages("devtools")'
   - R -e 'devtools::install(dependencies = TRUE)'
 
 before_script:
