--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ cache:
 sudo: false
 pandoc_version: 1.19.2.1
 
+before_install:
+  - brew install phantomJS
+
 before_script:
   - chmod +x ./_build.sh
   - chmod +x ./_deploy.sh
