--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,12 @@ sudo: false
 pandoc_version: 1.19.2.1
 
 before_install:
-  - brew install phantomJS
+  - brew update
 
 before_script:
   - chmod +x ./_build.sh
   - chmod +x ./_deploy.sh
+  - if [ $TRAVIS_OS_NAME = osx ]; then brew install phantomJS; fi
 
 script:
   - R CMD build .
