--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: ScPoEconometrics
 Type: Package
 Title: ScPoEconometrics
+Date: 2018-09-28
 Version: 0.1.1
 Authors@R: c(
     person("Florian", "Oswald", email = "florian.oswald@sciencespo.fr", role = c("aut","cre")),
