rename session1->chapter1, started with chapter2 slides, re-added correlation tutorial. [skip ci]

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ rsconnect
 /data/
 /inst/shinys/**/*.html
 /inst/tutorials/**/*.html
-_slides/session1/session1-*
+/inst/tutorials/**/*data
+_slides/chapter1/chapter1-*
+_slides/chapter2/chapter2-*
