learnr upgrade from github. bump version. work on some abouts. change code highlight on all tutorials

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: ScPoEconometrics
 Type: Package
 Title: ScPoEconometrics
 Date: 2018-09-09
-Version: 0.1.5
+Version: 0.1.6
 Authors@R: c(
     person("Florian", "Oswald", email = "florian.oswald@sciencespo.fr", role = c("aut","cre")),
     person("Jean-Marc", "Robin", email = "jeanmarc.robin@sciencespo.fr", role = "ctb"),
@@ -28,4 +28,5 @@ Suggests:
   testthat
 Remotes:
     rstudio/shinytest
+    rstudio/learnr
 RoxygenNote: 6.1.0
