travis fails because brew has moved phantomJS

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ pandoc_version: 1.19.2.1
 before_script:
   - chmod +x ./_build.sh
   - chmod +x ./_deploy.sh
-  - if [ $TRAVIS_OS_NAME = osx ]; then brew install phantomJS; fi
+  - if [ $TRAVIS_OS_NAME = osx ]; then brew tap homebrew/cask; brew cask install phantomJS; fi
 
 script:
   - R CMD build .
