--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ os:
   - linux
   - osx
 
+before_install:
+  - if [ $TRAVIS_OS_NAME = linux ]; then sudo apt-get update; fi
+  - if [ $TRAVIS_OS_NAME = linux ]; then sudo apt-get install -y ghostscript; fi
+
 cache:
   packages: yes
 sudo: false
