update with debriefing notes. moved meta from /inst/teachers to /teachers

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -3,13 +3,17 @@
 ^.*\.html$
 ^.*\.jpg$
 _book*
+_slides*
+_tex*
+^.*\.Rmd$
 ^.*\.yml$
 ^.*\.sh$
 ^.*\.css$
 ^.*\.gif$
 ^.*\.bib$
 ^.*\.tex$
-images
+images/
 data/.keep
 js/
 ^appveyor\.yml$
+teachers/
