--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ os:
   - osx
 
 before_install:
-  - if [ $TRAVIS_OS_NAME = linux ]; then sudo apt-get update; fi
+#  - if [ $TRAVIS_OS_NAME = linux ]; then sudo apt-get update; fi
   - if [ $TRAVIS_OS_NAME = linux ]; then sudo apt-get install -y ghostscript; fi
 
 cache:
