--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,13 @@ export(launchApp)
 export(runTutorial)
 import(Ecdat)
 import(EnvStats)
+import(Hmisc)
 import(bookdown)
 import(datasauRus)
 import(learnr)
+import(magick)
 import(mvtnorm)
+import(pdftools)
 import(plotly)
 import(reshape2)
 import(rmarkdown)
