--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: ScPoEconometrics
 Type: Package
 Title: ScPoEconometrics
-Date: 2019-09-02
-Version: 0.2.3
+Date: 2019-09-09
+Version: 0.2.4
 Authors@R: c(
     person("Florian", "Oswald", email = "florian.oswald@sciencespo.fr", role = c("aut","cre")),
     person("Jean-Marc", "Robin", email = "jeanmarc.robin@sciencespo.fr", role = "ctb"),
-    person("Vincent", "Viers", email = "vincent.viers@sciencespo.fr", role = "ctb"))
+    person("Vincent", "Viers", email = "vincent.viers@sciencespo.fr", role = "ctb"),
+    person("Pierret", "Villedieu", email = "pierre.villedieu@sciencespo.fr", role = "ctb"))
 Depends: R (>= 3.5.0)
 License: MIT + file LICENSE
 Description: The is the R package for the 2nd year UG course in econometrics at SciencesPo.
