closes #115 adds equatiomatic dependency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,10 @@ Imports: bookdown,
   AER,
   magick,
   pdftools,
-  Hmisc
+  Hmisc,
+  magrittr,
+  dplyr
+Remotes: datalorax/equatiomatic
 Suggests:
   shinytest,
   testthat
