moved interactions to after intro of dummy vars. changing most examples to use wooldridge datasets. added cowplot dependency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,9 @@ Imports: bookdown,
   pdftools,
   Hmisc,
   magrittr,
-  dplyr
+  dplyr,
+  corrplot,
+  cowplot
 Remotes: datalorax/equatiomatic
 Suggests:
   shinytest,
