--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,16 +7,24 @@ import(Ecdat)
 import(EnvStats)
 import(Hmisc)
 import(bookdown)
+import(corrplot)
+import(cowplot)
 import(datasauRus)
+import(dplyr)
+import(equatiomatic)
 import(learnr)
 import(magick)
 import(mvtnorm)
 import(pdftools)
 import(plotly)
+import(quantreg)
 import(reshape2)
 import(rmarkdown)
 import(shiny)
+import(stargazer)
 import(tidyverse)
 import(webshot)
+import(wooldridge)
+importFrom(magrittr,"%>%")
 importFrom(stats,rnorm)
 importFrom(stats,runif)
