finished. transition to modenrdive.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ import(rmarkdown)
 import(shiny)
 import(stargazer)
 import(tidyverse)
+import(ungeviz)
 import(webshot)
 import(wooldridge)
 importFrom(magrittr,"%>%")
