--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
     person("Florian", "Oswald", email = "florian.oswald@sciencespo.fr", role = c("aut","cre")),
     person("Jean-Marc", "Robin", email = "jeanmarc.robin@sciencespo.fr", role = "ctb"),
     person("Vincent", "Viers", email = "vincent.viers@sciencespo.fr", role = "ctb"),
-    person("Pierret", "Villedieu", email = "pierre.villedieu@sciencespo.fr", role = "ctb"))
+    person("Pierre", "Villedieu", email = "pierre.villedieu@sciencespo.fr", role = "ctb"))
 Depends: R (>= 3.5.0)
 License: MIT + file LICENSE
 Description: The is the R package for the 2nd year UG course in econometrics at SciencesPo.
