--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ before_script:
 
 script:
   - R CMD build .
-#  - R CMD INSTALL *tar.gz
-#  - if [ $TRAVIS_OS_NAME = osx ]; then R CMD check *tar.gz ; fi
-#  - if [ $TRAVIS_OS_NAME = linux ]; then R CMD check *tar.gz; fi
-#  - if [ $TRAVIS_OS_NAME = linux ] && [[ $TRAVIS_COMMIT_MESSAGE != *"[nobook]"* ]]; then ./_build.sh && ./_deploy.sh; fi
+  - R CMD INSTALL *tar.gz
+  - if [ $TRAVIS_OS_NAME = osx ]; then R CMD check *tar.gz ; fi
+  - if [ $TRAVIS_OS_NAME = linux ]; then R CMD check *tar.gz; fi
+  - if [ $TRAVIS_OS_NAME = linux ] && [[ $TRAVIS_COMMIT_MESSAGE != *"[nobook]"* ]]; then ./_build.sh && ./_deploy.sh; fi
 
