--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,7 @@ Imports: bookdown,
     quantreg,
     equatiomatic,
     ungeviz,
+    masteringmetrics,
     ggdag,
     data.table,
     huxtable,
