--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_script:
   - chmod +x ./_build.sh
   - chmod +x ./_deploy.sh
   - if [ $TRAVIS_OS_NAME = osx ]; then brew tap homebrew/cask; brew cask install phantomJS; brew install imagemagick@6; fi
+  - Rscript -e "tinytex::tlmgr_update();tinytex:::install_prebuilt()"
 
 script:
   - R CMD build .
@@ -29,4 +30,3 @@ script:
   - if [ $TRAVIS_OS_NAME = osx ]; then R CMD check *tar.gz ; fi
   - if [ $TRAVIS_OS_NAME = linux ]; then R CMD check *tar.gz; fi
   - if [ $TRAVIS_OS_NAME = linux ] && [[ $TRAVIS_COMMIT_MESSAGE != *"[nobook]"* ]]; then ./_build.sh && ./_deploy.sh; fi
-
