--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ script:
   - R CMD INSTALL *tar.gz
   - if [ $TRAVIS_OS_NAME = osx ]; then R CMD check *tar.gz ; fi
   - if [ $TRAVIS_OS_NAME = linux ]; then R CMD check *tar.gz; fi
-  - if [ $TRAVIS_OS_NAME = linux ] && [[ $TRAVIS_COMMIT_MESSAGE != *"[nobook]"* ]]; then ./_build.sh && ./_deploy.sh; fi
+  - if [ $TRAVIS_OS_NAME = osx ] && [[ $TRAVIS_COMMIT_MESSAGE != *"[nobook]"* ]]; then ./_build.sh && ./_deploy.sh; fi
