--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: ScPoEconometrics
 Type: Package
 Title: ScPoEconometrics
-Date: 2019-10-10
-Version: 0.2.6
+Date: 2020-10-31
+Version: 0.2.7
 Authors@R: c(
     person("Florian", "Oswald", email = "florian.oswald@sciencespo.fr", role = c("aut","cre")),
     person("Jean-Marc", "Robin", email = "jeanmarc.robin@sciencespo.fr", role = "ctb"),
     person("Vincent", "Viers", email = "vincent.viers@sciencespo.fr", role = "ctb"),
+    person("Gustave", "Kenedi", email = "gustave.kenedi@sciencespo.fr", role = "ctb"),
     person("Pierre", "Villedieu", email = "pierre.villedieu@sciencespo.fr", role = "ctb"))
 Depends: R (>= 3.5.0)
 License: MIT + file LICENSE
